--- a/nesProject/Makefile
+++ b/nesProject/Makefile
@@ -1,7 +1,7 @@
-CONTIKI_PROJECT = central_unit
+PROJECT_SOURCEFILES=addresses.c
 CONTIKI = ../contiki
+CONTIKI_WITH_RIME = 1
 
 CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
 
 include $(CONTIKI)/Makefile.include
-all: $(CONTIKI_PROJECT)
