--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "contiki"]
 	path = contiki
-	url = git@github.com:contiki-os/contiki.git
+	url = https://github.com/contiki-os/contiki.git
