--- a/nesProject/CMakeLists.txt
+++ b/nesProject/CMakeLists.txt
@@ -7,7 +7,7 @@ set(SOURCE_FILES central_unit.c door_node.c constants.h addresses.h addresses.c)
 add_executable(nesProject ${SOURCE_FILES} door_node.c constants.h addresses.h addresses.c)
 
 
-include_directories(D:/Documenti/GitHub/nesProject/contiki/core D:/Documenti/GitHub/nesProject/contiki)
+include_directories(../contiki/core ../contiki)
 
 add_custom_target(contiki_build COMMAND make all TARGET=native
                         CLION_EXE_DIR=${PROJECT_BINARY_DIR})
