Alarm feature moved to separate source files

--- a/nesProject/CMakeLists.txt
+++ b/nesProject/CMakeLists.txt
@@ -3,7 +3,15 @@ project(nesProject)
 
 set(CMAKE_C_STANDARD 99)
 
-set(SOURCE_FILES central_unit.c door_node.c constants.h addresses.h addresses.c)
+set(SOURCE_FILES
+        central_unit.c
+        door_node.c
+        constants.h
+        addresses.h
+        addresses.c
+        alarm_process.h
+        alarm_process.c
+    )
 add_executable(nesProject ${SOURCE_FILES} door_node.c constants.h addresses.h addresses.c)
 
 
