--- a/nesProject/Makefile
+++ b/nesProject/Makefile
@@ -1,4 +1,4 @@
-PROJECT_SOURCEFILES += addresses.c alarm_process.c
+PROJECT_SOURCEFILES += addresses.c alarm_process.c cuRimeStack.c gateRimeStack.c doorRimeStack.c
 CONTIKI = ../contiki
 CONTIKI_WITH_RIME = 1
 
