Implemented auto opening in door node, including handling of alarm preemption

--- a/nesProject/CMakeLists.txt
+++ b/nesProject/CMakeLists.txt
@@ -20,7 +20,7 @@ set(SOURCE_FILES
         doorRimeStack.h
         averageTemperatureProcess.c
         averageTemperatureProcess.h
-    )
+        doorAutoOpening.c doorAutoOpening.h)
 add_executable(nesProject ${SOURCE_FILES} door_node.c constants.h addresses.h addresses.c)
 
 
