Restructure folder hierarchy

--- a/nesProject/Makefile
+++ b/nesProject/Makefile
@@ -1,7 +1,8 @@
 PROJECT_SOURCEFILES += \
-    addresses.c alarm_process.c cuRimeStack.c gateRimeStack.c doorRimeStack.c \
-    averageTemperatureProcess.c doorAutoOpeningProcess.c gateAutoOpeningProcess.c \
-    lock.c
+    commons/addresses.c commons/alarm_process.c commons/lock.c \
+    central_unit/cuRimeStack.c \
+    gate/gateRimeStack.c gate/gateAutoOpeningProcess.c \
+    door/doorRimeStack.c door/averageTemperatureProcess.c door/doorAutoOpeningProcess.c
 
 CONTIKI = ../contiki
 CONTIKI_WITH_RIME = 1
@@ -9,3 +10,17 @@ CONTIKI_WITH_RIME = 1
 CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
 
 include $(CONTIKI)/Makefile.include
+
+mydirs: $(OBJECTDIR)
+	mkdir $(OBJECTDIR)/commons -p
+	mkdir $(OBJECTDIR)/gate -p
+	mkdir $(OBJECTDIR)/door -p
+	mkdir $(OBJECTDIR)/central_unit -p
+
+gate: mydirs gate_node
+
+cu: mydirs central_unit
+
+door: mydirs door_node
+
+
