Moved light sensing in common file

--- a/nesProject/Makefile
+++ b/nesProject/Makefile
@@ -1,5 +1,5 @@
 PROJECT_SOURCEFILES += \
-    commons/addresses.c commons/alarm_process.c commons/lock.c \
+    commons/addresses.c commons/alarm_process.c commons/lock.c commons/light.c \
     central_unit/cuRimeStack.c \
     gate/gateRimeStack.c gate/gateAutoOpeningProcess.c \
     door/doorRimeStack.c door/averageTemperatureProcess.c door/doorAutoOpeningProcess.c
@@ -11,11 +11,8 @@ CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
 
 include Makefile.include
 
-
 gate: gate_node
 
 cu: central_unit
 
 door: door_node
-
-
