Add smart mailbox node

--- a/nesProject/Makefile
+++ b/nesProject/Makefile
@@ -1,8 +1,9 @@
 PROJECT_SOURCEFILES += \
-    commons/addresses.c commons/alarm_process.c commons/lock.c commons/light.c \
+    commons/addresses.c commons/alarm_process.c commons/lock.c commons/light.c commons/command_process.c \
     central_unit/cuRimeStack.c \
     gate/gateRimeStack.c gate/gateAutoOpeningProcess.c \
-    door/doorRimeStack.c door/averageTemperatureProcess.c door/doorAutoOpeningProcess.c
+    door/doorRimeStack.c door/averageTemperatureProcess.c door/doorAutoOpeningProcess.c \
+	mailbox/mboxRimeStack.c
 
 CONTIKI = ../contiki
 CONTIKI_WITH_RIME = 1
@@ -17,6 +18,7 @@ mydirs:
 	mkdir $(OBJECTDIR)/gate -p
 	mkdir $(OBJECTDIR)/door -p
 	mkdir $(OBJECTDIR)/central_unit -p
+	mkdir $(OBJECTDIR)/mailbox -p
 
 gate: gate_node
 
