--- a/nesProject/Makefile
+++ b/nesProject/Makefile
@@ -2,14 +2,15 @@ PROJECT_SOURCEFILES += \
     commons/addresses.c commons/alarm_process.c commons/lock.c commons/light.c \
     central_unit/cuRimeStack.c \
     gate/gateRimeStack.c gate/gateAutoOpeningProcess.c \
-    door/doorRimeStack.c door/averageTemperatureProcess.c door/doorAutoOpeningProcess.c
+    door/doorRimeStack.c door/averageTemperatureProcess.c door/doorAutoOpeningProcess.c \
+	roomLight/roomLightRimeStack.c
 
 CONTIKI = ../contiki
 CONTIKI_WITH_RIME = 1
 
 CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
 
-include Makefile.include
+include ../contiki/Makefile.include
 
 mydirs:
 	mkdir $(OBJECTDIR) -p
@@ -17,9 +18,12 @@ mydirs:
 	mkdir $(OBJECTDIR)/gate -p
 	mkdir $(OBJECTDIR)/door -p
 	mkdir $(OBJECTDIR)/central_unit -p
+	mkdir $(OBJECTDIR)/roomLight -p
 
-gate: gate_node
+gate: mydirs gate_node
 
-cu: central_unit
+cu: mydirs central_unit
 
-door: door_node
+door: mydirs door_node
+
+roomLight: mydirs roomLight_node
