--- a/nesProject/Makefile
+++ b/nesProject/Makefile
@@ -3,14 +3,15 @@ PROJECT_SOURCEFILES += \
     central_unit/cuRimeStack.c \
     gate/gateRimeStack.c gate/gateAutoOpeningProcess.c \
     door/doorRimeStack.c door/averageTemperatureProcess.c door/doorAutoOpeningProcess.c \
-	mailbox/mboxRimeStack.c
+	  roomLight/roomLightRimeStack.c \
+	  mailbox/mboxRimeStack.c \
 
 CONTIKI = ../contiki
 CONTIKI_WITH_RIME = 1
 
 CFLAGS += -DPROJECT_CONF_H=\"project-conf.h\"
 
-include Makefile.include
+include ../contiki/Makefile.include
 
 mydirs:
 	mkdir $(OBJECTDIR) -p
@@ -18,10 +19,13 @@ mydirs:
 	mkdir $(OBJECTDIR)/gate -p
 	mkdir $(OBJECTDIR)/door -p
 	mkdir $(OBJECTDIR)/central_unit -p
+	mkdir $(OBJECTDIR)/roomLight -p
 	mkdir $(OBJECTDIR)/mailbox -p
 
-gate: gate_node
+gate: mydirs gate_node
 
-cu: central_unit
+cu: mydirs central_unit
 
-door: door_node
+door: mydirs door_node
+
+roomLight: mydirs roomLight_node
