--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ Central Unit
         5: get external light value from Gate Node
         [Add] 6: Shuts off all auto-adjusting lights.
 
-    [Add] Pull Smart Mailbox state every 20 minutes. Blue led is on when mailbox is full. When mailbox goes from empty to full, blue led blinks for 8 sec than stays on until it is emptied.
+    [Add] Receives state updates from mailbox. Blue led is on when mailbox is full.
 
 Door Node
     - Address 1.0
@@ -30,11 +30,11 @@ Gate Node
 [Add] Smart Mailbox
     - Address 4.0
     - Simulates empting and fulling with pressing of the button
-    - Updates central node on state change (push)
-    - Sends current state to CU on request (pull)
+    - Updates central node on state change
 
 [Add] Auto-adjusting lights
     - Listens in broadcast channel, no address
-    - Light node with, a button to switch it on/off. Being on is signaled with a blue led on.
+    - Light node with a button to switch it on/off. Being on is signaled with a blue led on.
     - The light sensor is used to detect the natural light and balance it, e.g. if the natural light is 40% of the desired level it's balanced by 60% from the artificial light. Each light node is independent.
+    - Uses exponential average to smoothen light change and avoid sensing errors (e.g. a person passing in front of window)
     - Listens for broadcast "shut off all" command from CU
